--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
-html, body {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-body {
+html, body {
   height: 100%;
-  background-color: #f9f9f9;
+  font-family: Arial, sans-serif;
 }
